// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`copyTemplates should work as expected when description is not provided 1`] = `
Object {
  "src/MyNewComponent/MyNewComponent.e2e.js": "import {
  createStoryUrl,
  waitForVisibilityOf,
  scrollToElement,
} from 'wix-ui-test-utils/protractor';

import { eyesItInstance } from '../../test/utils/eyes-it';
import { myNewComponentTestkitFactory } from '../../testkit/protractor';
import { storySettings } from './docs/storySettings';

const eyes = eyesItInstance();

describe('MyNewComponent', () => {
  const storyUrl = createStoryUrl({
    kind: storySettings.category,
    story: storySettings.storyName,
  });

  const createDriver = async (dataHook = storySettings.dataHook) => {
    const driver = myNewComponentTestkitFactory({ dataHook });

    await waitForVisibilityOf(
      await driver.element(),
      \`Cannot find <MyNewComponent/> component with dataHook of \${dataHook}\`,
    );

    await scrollToElement(await driver.element());

    return driver;
  };

  beforeAll(async () => {
    await browser.get(storyUrl);
  });

  eyes.it('should render', async () => {
    await createDriver();
  });

  eyes.it('should render live example', async () => {
    await createDriver('story-my-new-component-live-example');
  });
});
",
  "src/MyNewComponent/MyNewComponent.js": "import React from 'react';
import PropTypes from 'prop-types';
import styles from './MyNewComponent.scss';

import Text from '../Text';
import Button from '../Button';

class MyNewComponent extends React.PureComponent {
  static displayName = 'MyNewComponent';

  static propTypes = {
    dataHook: PropTypes.string,

    /** Text for the button */
    buttonText: PropTypes.string,
  };

  static defaultProps = {
    buttonText: 'Click me!',
  };

  state = {
    count: 0,
  };

  _handleClick = () => {
    this.setState(({ count }) => ({
      count: count + 1,
    }));
  };

  render() {
    const { count } = this.state;
    const { dataHook, buttonText } = this.props;

    return (
      <div className={styles.root} data-hook={dataHook}>
        <Text dataHook=\\"myNewComponent-count\\">
          You clicked this button {count} times
        </Text>

        <div className={styles.button}>
          <Button onClick={this._handleClick} dataHook=\\"myNewComponent-button\\">
            {buttonText}
          </Button>
        </div>
      </div>
    );
  }
}

export default MyNewComponent;
",
  "src/MyNewComponent/MyNewComponent.meta.js": "import MyNewComponent from './MyNewComponent';
import Registry from '@ui-autotools/registry';

const metadata = Registry.getComponentMetadata(MyNewComponent);

metadata.exportedFrom({
  path: 'src/MyNewComponent/MyNewComponent.js',
});
",
  "src/MyNewComponent/MyNewComponent.private.uni.driver.js": "import { myNewComponentDriverFactory as publicDriverFactory } from './MyNewComponent.uni.driver';

export const myNewComponentPrivateDriverFactory = base => {
  return {
    ...publicDriverFactory(base),

    // Add here driver methods that considered \\"private\\"
  };
};
",
  "src/MyNewComponent/MyNewComponent.scss": ".root {
  text-align: center;
}

.button {
  display: flex;
  justify-content: space-evenly;
}
",
  "src/MyNewComponent/MyNewComponent.spec.js": "import React from 'react';
import { createUniDriverFactory } from 'wix-ui-test-utils/uni-driver-factory';

import MyNewComponent from './MyNewComponent';
import { myNewComponentPrivateDriverFactory } from './MyNewComponent.private.uni.driver';

describe('MyNewComponent', () => {
  const createDriver = createUniDriverFactory(myNewComponentPrivateDriverFactory);

  it('should render', async () => {
    const driver = createDriver(<MyNewComponent />);

    expect(await driver.exists()).toBeTruthy();
    expect(await driver.getButtonText()).toEqual('Click me!');
  });

  it('should increment', async () => {
    const driver = createDriver(<MyNewComponent />);

    await driver.clickButton();
    await driver.clickButton();

    expect(await driver.getCountText()).toEqual(
      'You clicked this button 2 times',
    );
  });

  it('should allow changing the button text', async () => {
    const driver = createDriver(<MyNewComponent buttonText=\\"Press me\\" />);

    expect(await driver.getButtonText()).toEqual('Press me');
  });
});

",
  "src/MyNewComponent/MyNewComponent.uni.driver.js": "import { baseUniDriverFactory } from 'wix-ui-test-utils/base-driver';

export const myNewComponentDriverFactory = base => {
  return {
    ...baseUniDriverFactory(base),

    /** Get the current count */
    getCountText: async () => base.$('[data-hook=\\"myNewComponent-count\\"]').text(),

    /** Click the button */
    clickButton: async () => base.$('[data-hook=\\"myNewComponent-button\\"]').click(),

    /** Get the button's text */
    getButtonText: async () => base.$('[data-hook=\\"myNewComponent-button\\"]').text(),
  };
};
",
  "src/MyNewComponent/docs/index.story.js": "import React from 'react';

import {
  header,
  tabs,
  tab,
  importExample,
  columns,
  title,
  description,
  code as baseCode,
  api,
  testkit,
  playground
} from 'wix-storybook-utils/Sections';

import { storySettings } from './storySettings';
import { baseScope } from '../../../stories/utils/Components/LiveCodeExample';

import MyNewComponent from '..';

const code = config =>
  baseCode({
    components: { ...baseScope, MyNewComponent },
    compact: true,
    ...config,
  });


export default {
  category: storySettings.category,
  storyName: storySettings.storyName,

  component: MyNewComponent,
  componentPath: '..',

  componentProps: {
    dataHook: storySettings.dataHook,
    buttonText: undefined,
  },

  exampleProps: {
    // Put here presets of props, for more info:
    // https://github.com/wix/wix-ui/blob/master/packages/wix-storybook-utils/docs/usage.md#using-list
  },

  sections: [
    header({
      component: <MyNewComponent/>,
      issueUrl: 'https://github.com/wix/wix-style-react/issues/new',
    }),

    tabs([
      tab({
        title: 'Description',
        sections: [
          columns([
            description({
              title: 'Description',
              text: 'Short text about component',
            }),
          ]),

          columns([
            importExample({
              source: \\"import MyNewComponent from 'wix-style-react/MyNewComponent';\\",
            }),
          ]),

          title('Examples'),

          code({
            source: \`<MyNewComponent
  dataHook=\\"story-my-new-component-live-example\\"
  buttonText=\\"Press me for a surprise\\"
/>\`
          }),
        ]
      }),

      ...[
        { title: 'API', sections: [api()] },
        { title: 'Testkit', sections: [testkit()] },
        { title: 'Playground', sections: [playground()] }
      ].map(tab)
    ])
  ]
};
",
  "src/MyNewComponent/docs/storySettings.js": "import { Category } from '../../../stories/storiesHierarchy';

export const storySettings = {
  category: Category.COMPONENTS,

  storyName: 'MyNewComponent',
  dataHook: 'story-my-new-component',
};
",
  "src/MyNewComponent/index.js": "export { default } from './MyNewComponent.js';
",
}
`;

exports[`copyTemplates should work as expected when description is provided 1`] = `
Object {
  "src/MyNewComponent/MyNewComponent.e2e.js": "import {
  createStoryUrl,
  waitForVisibilityOf,
  scrollToElement,
} from 'wix-ui-test-utils/protractor';

import { eyesItInstance } from '../../test/utils/eyes-it';
import { myNewComponentTestkitFactory } from '../../testkit/protractor';
import { storySettings } from './docs/storySettings';

const eyes = eyesItInstance();

describe('MyNewComponent', () => {
  const storyUrl = createStoryUrl({
    kind: storySettings.category,
    story: storySettings.storyName,
  });

  const createDriver = async (dataHook = storySettings.dataHook) => {
    const driver = myNewComponentTestkitFactory({ dataHook });

    await waitForVisibilityOf(
      await driver.element(),
      \`Cannot find <MyNewComponent/> component with dataHook of \${dataHook}\`,
    );

    await scrollToElement(await driver.element());

    return driver;
  };

  beforeAll(async () => {
    await browser.get(storyUrl);
  });

  eyes.it('should render', async () => {
    await createDriver();
  });

  eyes.it('should render live example', async () => {
    await createDriver('story-my-new-component-live-example');
  });
});
",
  "src/MyNewComponent/MyNewComponent.js": "import React from 'react';
import PropTypes from 'prop-types';
import styles from './MyNewComponent.scss';

import Text from '../Text';
import Button from '../Button';

class MyNewComponent extends React.PureComponent {
  static displayName = 'MyNewComponent';

  static propTypes = {
    dataHook: PropTypes.string,

    /** Text for the button */
    buttonText: PropTypes.string,
  };

  static defaultProps = {
    buttonText: 'Click me!',
  };

  state = {
    count: 0,
  };

  _handleClick = () => {
    this.setState(({ count }) => ({
      count: count + 1,
    }));
  };

  render() {
    const { count } = this.state;
    const { dataHook, buttonText } = this.props;

    return (
      <div className={styles.root} data-hook={dataHook}>
        <Text dataHook=\\"myNewComponent-count\\">
          You clicked this button {count} times
        </Text>

        <div className={styles.button}>
          <Button onClick={this._handleClick} dataHook=\\"myNewComponent-button\\">
            {buttonText}
          </Button>
        </div>
      </div>
    );
  }
}

export default MyNewComponent;
",
  "src/MyNewComponent/MyNewComponent.meta.js": "import MyNewComponent from './MyNewComponent';
import Registry from '@ui-autotools/registry';

const metadata = Registry.getComponentMetadata(MyNewComponent);

metadata.exportedFrom({
  path: 'src/MyNewComponent/MyNewComponent.js',
});
",
  "src/MyNewComponent/MyNewComponent.private.uni.driver.js": "import { myNewComponentDriverFactory as publicDriverFactory } from './MyNewComponent.uni.driver';

export const myNewComponentPrivateDriverFactory = base => {
  return {
    ...publicDriverFactory(base),

    // Add here driver methods that considered \\"private\\"
  };
};
",
  "src/MyNewComponent/MyNewComponent.scss": ".root {
  text-align: center;
}

.button {
  display: flex;
  justify-content: space-evenly;
}
",
  "src/MyNewComponent/MyNewComponent.spec.js": "import React from 'react';
import { createUniDriverFactory } from 'wix-ui-test-utils/uni-driver-factory';

import MyNewComponent from './MyNewComponent';
import { myNewComponentPrivateDriverFactory } from './MyNewComponent.private.uni.driver';

describe('MyNewComponent', () => {
  const createDriver = createUniDriverFactory(myNewComponentPrivateDriverFactory);

  it('should render', async () => {
    const driver = createDriver(<MyNewComponent />);

    expect(await driver.exists()).toBeTruthy();
    expect(await driver.getButtonText()).toEqual('Click me!');
  });

  it('should increment', async () => {
    const driver = createDriver(<MyNewComponent />);

    await driver.clickButton();
    await driver.clickButton();

    expect(await driver.getCountText()).toEqual(
      'You clicked this button 2 times',
    );
  });

  it('should allow changing the button text', async () => {
    const driver = createDriver(<MyNewComponent buttonText=\\"Press me\\" />);

    expect(await driver.getButtonText()).toEqual('Press me');
  });
});

",
  "src/MyNewComponent/MyNewComponent.uni.driver.js": "import { baseUniDriverFactory } from 'wix-ui-test-utils/base-driver';

export const myNewComponentDriverFactory = base => {
  return {
    ...baseUniDriverFactory(base),

    /** Get the current count */
    getCountText: async () => base.$('[data-hook=\\"myNewComponent-count\\"]').text(),

    /** Click the button */
    clickButton: async () => base.$('[data-hook=\\"myNewComponent-button\\"]').click(),

    /** Get the button's text */
    getButtonText: async () => base.$('[data-hook=\\"myNewComponent-button\\"]').text(),
  };
};
",
  "src/MyNewComponent/README.md": "# \`<MyNewComponent/>\`

> This is a very cool component, ya'll
",
  "src/MyNewComponent/docs/index.story.js": "import React from 'react';

import {
  header,
  tabs,
  tab,
  importExample,
  columns,
  title,
  description,
  code as baseCode,
  api,
  testkit,
  playground
} from 'wix-storybook-utils/Sections';

import { storySettings } from './storySettings';
import { baseScope } from '../../../stories/utils/Components/LiveCodeExample';

import MyNewComponent from '..';

const code = config =>
  baseCode({
    components: { ...baseScope, MyNewComponent },
    compact: true,
    ...config,
  });


export default {
  category: storySettings.category,
  storyName: storySettings.storyName,

  component: MyNewComponent,
  componentPath: '..',

  componentProps: {
    dataHook: storySettings.dataHook,
    buttonText: undefined,
  },

  exampleProps: {
    // Put here presets of props, for more info:
    // https://github.com/wix/wix-ui/blob/master/packages/wix-storybook-utils/docs/usage.md#using-list
  },

  sections: [
    header({
      component: <MyNewComponent/>,
      issueUrl: 'https://github.com/wix/wix-style-react/issues/new',
    }),

    tabs([
      tab({
        title: 'Description',
        sections: [
          columns([
            description({
              title: 'Description',
              text: 'Short text about component',
            }),
          ]),

          columns([
            importExample({
              source: \\"import MyNewComponent from 'wix-style-react/MyNewComponent';\\",
            }),
          ]),

          title('Examples'),

          code({
            source: \`<MyNewComponent
  dataHook=\\"story-my-new-component-live-example\\"
  buttonText=\\"Press me for a surprise\\"
/>\`
          }),
        ]
      }),

      ...[
        { title: 'API', sections: [api()] },
        { title: 'Testkit', sections: [testkit()] },
        { title: 'Playground', sections: [playground()] }
      ].map(tab)
    ])
  ]
};
",
  "src/MyNewComponent/docs/storySettings.js": "import { Category } from '../../../stories/storiesHierarchy';

export const storySettings = {
  category: Category.COMPONENTS,

  storyName: 'MyNewComponent',
  dataHook: 'story-my-new-component',
};
",
  "src/MyNewComponent/index.js": "export { default } from './MyNewComponent.js';
",
}
`;

exports[`copyTemplates should work for test component 1`] = `
Object {
  "src/MyTestComponent/MyTestComponent.e2e.js": "import {
  createStoryUrl,
  waitForVisibilityOf,
  scrollToElement,
} from 'wix-ui-test-utils/protractor';

import { eyesItInstance } from '../../test/utils/eyes-it';
import { myTestComponentTestkitFactory } from '../../testkit/protractor';
import { storySettings } from './docs/storySettings';

const eyes = eyesItInstance();

describe('MyTestComponent', () => {
  const storyUrl = createStoryUrl({
    kind: storySettings.category,
    story: storySettings.storyName,
  });

  const createDriver = async (dataHook = storySettings.dataHook) => {
    const driver = myTestComponentTestkitFactory({ dataHook });

    await waitForVisibilityOf(
      await driver.element(),
      \`Cannot find <MyTestComponent/> component with dataHook of \${dataHook}\`,
    );

    await scrollToElement(await driver.element());

    return driver;
  };

  beforeAll(async () => {
    await browser.get(storyUrl);
  });

  eyes.it('should render', async () => {
    await createDriver();
  });

  eyes.it('should render live example', async () => {
    await createDriver('story-my-test-component-live-example');
  });
});
",
  "src/MyTestComponent/MyTestComponent.js": "import React from 'react';
import PropTypes from 'prop-types';
import styles from './MyTestComponent.scss';

import Text from '../Text';
import Button from '../Button';

class MyTestComponent extends React.PureComponent {
  static displayName = 'MyTestComponent';

  static propTypes = {
    dataHook: PropTypes.string,

    /** Text for the button */
    buttonText: PropTypes.string,
  };

  static defaultProps = {
    buttonText: 'Click me!',
  };

  state = {
    count: 0,
  };

  _handleClick = () => {
    this.setState(({ count }) => ({
      count: count + 1,
    }));
  };

  render() {
    const { count } = this.state;
    const { dataHook, buttonText } = this.props;

    return (
      <div className={styles.root} data-hook={dataHook}>
        <Text dataHook=\\"myTestComponent-count\\">
          You clicked this button {count} times
        </Text>

        <div className={styles.button}>
          <Button onClick={this._handleClick} dataHook=\\"myTestComponent-button\\">
            {buttonText}
          </Button>
        </div>
      </div>
    );
  }
}

export default MyTestComponent;
",
  "src/MyTestComponent/MyTestComponent.meta.js": "import MyTestComponent from './MyTestComponent';
import Registry from '@ui-autotools/registry';

const metadata = Registry.getComponentMetadata(MyTestComponent);

metadata.exportedFrom({
  path: 'src/MyTestComponent/MyTestComponent.js',
});
",
  "src/MyTestComponent/MyTestComponent.private.uni.driver.js": "import { myTestComponentDriverFactory as publicDriverFactory } from './MyTestComponent.uni.driver';

export const myTestComponentPrivateDriverFactory = base => {
  return {
    ...publicDriverFactory(base),

    // Add here driver methods that considered \\"private\\"
  };
};
",
  "src/MyTestComponent/MyTestComponent.scss": ".root {
  text-align: center;
}

.button {
  display: flex;
  justify-content: space-evenly;
}
",
  "src/MyTestComponent/MyTestComponent.spec.js": "import React from 'react';
import { createUniDriverFactory } from 'wix-ui-test-utils/uni-driver-factory';

import MyTestComponent from './MyTestComponent';
import { myTestComponentPrivateDriverFactory } from './MyTestComponent.private.uni.driver';

describe('MyTestComponent', () => {
  const createDriver = createUniDriverFactory(myTestComponentPrivateDriverFactory);

  it('should render', async () => {
    const driver = createDriver(<MyTestComponent />);

    expect(await driver.exists()).toBeTruthy();
    expect(await driver.getButtonText()).toEqual('Click me!');
  });

  it('should increment', async () => {
    const driver = createDriver(<MyTestComponent />);

    await driver.clickButton();
    await driver.clickButton();

    expect(await driver.getCountText()).toEqual(
      'You clicked this button 2 times',
    );
  });

  it('should allow changing the button text', async () => {
    const driver = createDriver(<MyTestComponent buttonText=\\"Press me\\" />);

    expect(await driver.getButtonText()).toEqual('Press me');
  });
});

",
  "src/MyTestComponent/MyTestComponent.uni.driver.js": "import { baseUniDriverFactory } from 'wix-ui-test-utils/base-driver';

export const myTestComponentDriverFactory = base => {
  return {
    ...baseUniDriverFactory(base),

    /** Get the current count */
    getCountText: async () => base.$('[data-hook=\\"myTestComponent-count\\"]').text(),

    /** Click the button */
    clickButton: async () => base.$('[data-hook=\\"myTestComponent-button\\"]').click(),

    /** Get the button's text */
    getButtonText: async () => base.$('[data-hook=\\"myTestComponent-button\\"]').text(),
  };
};
",
  "src/MyTestComponent/docs/index.story.js": "import React from 'react';

import {
  header,
  tabs,
  tab,
  importExample,
  columns,
  title,
  description,
  code as baseCode,
  api,
  testkit,
  playground
} from 'wix-storybook-utils/Sections';

import { storySettings } from './storySettings';
import { baseScope } from '../../../stories/utils/Components/LiveCodeExample';

import MyTestComponent from '..';

const code = config =>
  baseCode({
    components: { ...baseScope, MyTestComponent },
    compact: true,
    ...config,
  });

export default {
  category: storySettings.category,
  storyName: storySettings.storyName,

  component: MyTestComponent,
  componentPath: '..',

  componentProps: {
    dataHook: storySettings.dataHook,
    buttonText: undefined,
  },

  exampleProps: {
    // Put here presets of props, for more info:
    // https://github.com/wix/wix-ui/blob/master/packages/wix-storybook-utils/docs/usage.md#using-list
  },

  sections: [
    header({
      component: <MyTestComponent/>,
      issueUrl: 'https://github.com/wix/wix-style-react/issues/new',
    }),

    tabs([
      tab({
        title: 'Description',
        sections: [
          columns([
            description({
              title: 'Description',
              text: 'Short text about component',
            }),
          ]),

          columns([
            importExample({
              source: \\"import MyTestComponent from 'wix-style-react/MyTestComponent';\\",
            }),
          ]),

          title('Examples'),

          code({
            source: \`<MyTestComponent
  dataHook=\\"story-my-test-component-live-example\\"
  buttonText=\\"Press me for a surprise\\"
/>\`
          }),
        ]
      }),

      ...[
        { title: 'API', sections: [api()] },
        { title: 'Testkit', sections: [testkit()] },
        { title: 'Playground', sections: [playground()] }
      ].map(tab)
    ])
  ]
};
",
  "src/MyTestComponent/docs/storySettings.js": "import { TESTS_PREFIX } from '../../../stories/storiesHierarchy';

export const storySettings = {
  category: TESTS_PREFIX,
  storyName: 'MyTestComponent',
  dataHook: 'story-my-test-component',
};
",
  "src/MyTestComponent/index.js": "export { default } from './MyTestComponent.js';
",
}
`;
